# soliton_solver

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  version.py
.github/workflows/: python-publish.yml
core/: io.py
examples/: spin_triplet_gl.py  super_ferro_gl.py  superferro_run.py  theories_list.py
soliton_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soliton_solver/core/: colormaps.py  derivatives.py  integrator.py  io.py  params.py  simulation.py  utils.py
soliton_solver/examples/: abelian_higgs_gl.py  anisotropic_gl.py  anyon_gl.py  baby_skyrme_gl.py  bose_einstein_condensate_gl.py  chiral_magnet_gl.py  liquid_crystal_gl.py  spin_triplet_gl.py  super_ferro_gl.py  superferro_run.py
soliton_solver/theories/: __init__.py  registry.py
soliton_solver/theories/anisotropic_superconductor/: __init__.py  initial_config.py  instructions.py  io.py  kernels.py  observables.py  params.py  render_gl.py
soliton_solver/visualization/: gl_backend.py
theories/baby_skyrme/: __init__.py  params.py  render_gl.py
theories/chiral_magnet/: __init__.py  initial_config.py  observables.py
theories/ferromagnetic_superconductor/: __init__.py  params.py
theories/ginzburg_landau_superconductor/: __init__.py  io.py  kernels.py  observables.py
theories/liquid_crystal/: __init__.py  io.py  render_gl.py
theories/maxwell_chern_simons_higgs/: io.py  kernels.py  observables.py
theories/spin_triplet_superconducting_magnet/: __init__.py  initial_config.py  params.py  render_gl.py
visualization/: gl_backend.py
(+73 files in other folders)
